feat: 의상 등록·수정 시 이미지 업로드 및 URL 반환 기능 추가